fix the animation on mobile

--- a/src/styles/contact.css
+++ b/src/styles/contact.css
@@ -103,7 +103,6 @@ input, textarea {
     padding: 0.2em 0.5em;
     background-color: #2f2f2f;
     color: white;
-    /* border: 2px solid #030303; */
     border: 2px solid #111;
 }
 
@@ -111,6 +110,13 @@ input:hover:not(:focus),
 textarea:hover:not(:focus) {
     border: 2px solid white;
 }
+
+input:is(:focus-visible),
+textarea:is(:focus-visible) {
+    border: 2px solid white;
+    outline: none;
+}
+
 
 .email {
     grid-column: 1 / -1;
